force-app/main/default/objects/Account/fields/DefaultPricebook__c.field-meta.xml
<CustomField>
    <fullName>DefaultPricebook__c</fullName>
    <label>Default Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>