force-app/main/default/objects/Account/fields/RenewalLeadDays__c.field-meta.xml
<CustomField>
    <fullName>RenewalLeadDays__c</fullName>
    <label>Renewal Lead Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>