force-app/main/default/objects/Account/fields/RenewalMode__c.field-meta.xml
<CustomField>
    <fullName>RenewalMode__c</fullName>
    <label>Renewal Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>